--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,47 +1,39 @@
-<div style="background-color:#DD1155; width:50%; height:50%; float:left">
-    <div id="headers">
-        <h1> Bring your friends together. </h1>
-        <h2> Be the greatest host. </h2>
+<div class="top-section">
+  <div class="first-row">
+    <div class="first-element">
+      <h1> Bring your friends together.</h1>
+      <h2> Be the greatest host. </h2>
     </div>
-</div>
-
-<div style="background-color:#E8DDB5; width:50%; height:50%; float:right">
-    <div id="content">
+    <div class="second-element">
+      <div id="content">
         <%= content_tag(:iframe,'', src: "https://random-placement-26.superhi.com/", scrolling: "no") %>
+      </div>
     </div>
-</div>
-
-<div id="button-area" style="background-color:#FFFDF7; width:50%; height:50%; float:left">
+  </div>
+  <div class="second-row">
     <div id="header-buttons">
         <%= link_to "Learn More", "#learnmore", class: "button-main" %>
         <%= link_to "Create Event", "#launch", class: "button-main" %>
     </div>
+     <div id="banner"></div>
+  </div>
 </div>
 
-<div id="banner" style="background-color: #DD1155; width:50%; height:50%; float:right">
-</div>
-
-<section>
-    <div class="container" id="learnmore">
-        <div class="column">
-            <%= image_tag "homepage-image-1.jpg" , class: "tilt" %>
-        </div>
-        <div class="column">
-            <%= image_tag "homepage-image-2.jpg", class: "tilt"%>
-        </div>
-        <div class="column">
-            <%= image_tag "homepage-image-3.jpg", class: "tilt" %>
-        </div>
+<div class="learn-more">
+   <div id="learnmore">
+      <%= image_tag "homepage-image-2.jpg", class: "tilt"%>
+      <%= image_tag "homepage-image-1.jpg" , class: "tilt" %>
+      <%= image_tag "homepage-image-3.jpg", class: "tilt" %>
     </div>
-
     <div class="textblock">
+       
         <h1> Plan <i class="fas fa-angle-right"></i> Create <i class="fas fa-angle-right"></i> Invite <i class="fas fa-angle-right"></i> Track <i class="fas fa-angle-right"></i> <b style="color: #DD1155">Host</b> </h1>
         <p>
             Host.it is the event planner all of us always wanted. Designed to make the task of organizing house-parties, movie-nights, BBQ afternoons and sleepovers more fun and hustle-free. 
             All you need is to set the time and place, add some basic info and start inviting your guests by text or email. Once your guests start accepting their invitations, you will be able to track who is joining and what they are bringing, send them updates, and even allow them 
             to add music to a playlist co-curated by everyone. <br><br> Leave the mess of chat-groups and social media platforms behind and just ... host it! </p>
     </div>
-</section>
+</div>
 
 <section id="launch">
 <h1 id="headers2"> Let&apos;s throw a kick-ass event! </h1>
