--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
 <div class="learn-more">
    <div id="learnmore">
       <%= image_tag "homepage-image-2.jpg", class: "tilt"%>
-      <%= image_tag "homepage-image-1.jpg" , class: "tilt" %>
+      <%= image_tag "homepage-image-1.jpg" , class: "tilt", id: "middle" %>
       <%= image_tag "homepage-image-3.jpg", class: "tilt" %>
     </div>
     <div class="textblock">
