--- a/app/assets/stylesheets/pages/_bring_list.scss
+++ b/app/assets/stylesheets/pages/_bring_list.scss
@@ -24,8 +24,26 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  min-height: 400px;
+  max-height: 420px;
   border: 1.5px solid black;
   border-radius: 2px;
+  .button-map {
+    background-color: $magenta;
+    color: $white;
+    text-decoration: none;
+    padding: 5px 30px 5px 30px;
+    border: 1.5px solid black;
+    border-radius: 2px;
+    // margin-top: auto;
+    height: 100%;
+
+    &:hover {
+      text-decoration: none;
+      background-color: black;
+      color: $white;
+    }
+  }
 }
 .playlist-container {
   margin-left: 48px;
@@ -46,11 +64,11 @@
   .form-group {
     width: 80%;
     height: 100%;
-    margin: 0px;
-    padding: 5px;
-    .form-control {
+      .form-control {
       height: 100%;
       width: 85%;
+      font: 400 20px/1.5 Gilroy, sans-serif;
+
     }
   }
   .button-submit {
@@ -64,17 +82,17 @@
   max-height: 415px;
   overflow: scroll;
   tr {
-    font: 200 20px/1.5 Gilroy, sans-serif;
+    font: 400 20px/1.5 Gilroy, sans-serif;
     border-bottom: 1px solid #ccc;
     width: 100%;
   }
   th {
-    padding: 6px 5px;
+    padding: 12px 5px;
     text-align: center;
   }
   td {
     text-align: center;
-    padding: 6px 5px;
+    padding: 12px 5px;
   }
 }
 .items-form {
