--- a/app/views/shared/_items_form.html.erb
+++ b/app/views/shared/_items_form.html.erb
@@ -5,25 +5,35 @@
             <% @event.items.each do |item| %>
               <% if item.user_id != nil %>
                  <% if item.user.first_name == nil %>
-                  <tr><td id="items-<%=item.id%>"> <%= item.name %></td>
-                  <td>Somebody</td></tr>
+                  <tr>
+                  <td><%= link_to '✖️', item_path(item), method: :delete, remote: true %></td>
+                  <td><%= item.name %></td>
+                  <td>Somebody</td>
+                  </tr>
                 <% else %>
-                  <tr><td id="items-<%=item.id%>"> <%= item.name %></td>
-                  <td><%= item.user.first_name %></td></tr>
+                  <tr>
+                  <td><%= link_to '✖️', item_path(item), method: :delete, remote: true %></td>
+                  <td> <%= item.name %></td>
+                  <td><%= item.user.first_name %></td>
+                  </tr>
                 <% end %>
               <% else %>
-                  <tr><td id="items-<%=item.id%>"> <%= item.name %></td>
-                  <td><%= button_to 'Bring it', item_path(item), class:"button-create", method: :patch, remote: true %></td>
+                  <tr>
+                  <td><%= link_to '✖️', item_path(item), method: :delete, remote: true %></td>
+                  <td id="items-<%=item.id%>"> <%= item.name %></td>
+                  <td><%= button_to 'Bring it', item_path(item), class:"button-map", method: :patch, remote: true %></td>
+                  </tr>
               <% end %>
             <% end %>
             </table>
         </div>
-        <div class="items-form">
+        <div class="items-form m-3">
             <%= simple_form_for([@event, Item.new], remote: true) do |f| %>
             <div class="add-item">
               <%= f.input :name, :placeholder => "Enter item", label: false %>
-              <%= f.submit "Add Item", class: "button-create" %>
+              <%= f.submit "Add Item", class: "button-map" %>
             </div>
             <% end %>
         </div>
 </div>
+
