--- a/app/views/dashboard/_inner_card.html.erb
+++ b/app/views/dashboard/_inner_card.html.erb
@@ -1,4 +1,7 @@
-<div class="event-card-header"><h6 id="event-title"><%= "#{day_event.title}" %></h6>
+<div class="event-card-header">
+  <h6 id="event-title">
+    <%= "#{day_event.title}" %>
+  </h6>
   <% if day_event.user == current_user %>
     <div class="event-card-status-circle-hosting">
     </div>
@@ -36,14 +39,5 @@
   </div>
 <% end %>
 
-<% if invitations_data.include?([day_event.id, "pending"]) %>
-  <div class="event-card-footer-symbols">
-  <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), title: "Edit event",method: :patch) do %>
-    <i class="fas fa-check-circle"></i>
-  <% end %>
-  <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), method: :patch) do  %>
-    <i class="fas fa-times-circle"></i>
-  <% end %>
-  </div>
-<% end %>
+
 
