--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -19,21 +19,34 @@
           <div style="<%= @active %>" id="event-card-section-inner">
             <% day[1].each do |day_event| %>
               <% collapse_today = day_event.scheduled_at.today? ? "display: flex;" : "" %>
-              <div style="<%= collapse_today %>">
+              <div class="banana" style=<%= collapse_today %> >
 
                 <%= link_to event_path(day_event.id), class: "event-card-link" do %>
+
                   <% if day_event.user == current_user %>
                     <div class="event-card-hosting">
                       <%= render "inner_card", invitations_data: @invitations_data, day_event: day_event %>
                     </div>
+
                   <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-                    <div class="event-card-hosting">
+                    <div class="event-card-accepted">
                       <%= render "inner_card", invitations_data: @invitations_data, day_event: day_event %>
                     </div>
+
                   <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
                     <div class="event-card-pending">
                       <%= render "inner_card", invitations_data: @invitations_data, day_event: day_event %>
                     </div>
+
+                    <div class="event-card-footer-symbols">
+                      <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), title: "Edit event",method: :patch) do %>
+                        <i class="fas fa-check-circle"></i>
+                      <% end %>
+                      <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), method: :patch) do  %>
+                        <i class="fas fa-times-circle"></i>
+                      <% end %>
+                    </div>
+
                   <% end %>
                 <% end %>
 
