changed invitation status colors in modal

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -368,7 +368,7 @@
             }
 
             .invitation-status-pending {
-              background-color: $white;
+              background-color: $blue;
             }
 
             .invitation-status-accepted {
@@ -376,7 +376,7 @@
             }
 
             .invitation-status-declined {
-              background-color: $red;
+              background-color: $violet;
             }
           }
 
