--- a/app/views/events/_event_form.html.erb
+++ b/app/views/events/_event_form.html.erb
@@ -23,6 +23,7 @@
       <%= f.input :scheduled_at, as: :string, label: false, input_html: {class: "datepicker", placeholder: "When?" } %>
     </div>
     <%= f.input :description,label: false, input_html: {placeholder: "Describe what your event is about and what people can expect at the event" } %>
+    <%= f.input :spotify_playlist, label: false, input_html: { placeholder: "Enter the Spotify URI for your playlist"} %>
     <%#= link_to 'Sign in with Spotify', '/auth/spotify' %>
     <% if current_page?(new_event_path) %>
       <%= f.submit "Create Event", class: "button-create" %>
