--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -20,7 +20,7 @@
             <% day[1].each do |day_event| %>
               <% collapse_today = day_event.scheduled_at.today? ? "display: flex;" : "" %>
 
-              <div class="banana" style=<%= collapse_today %> >
+              <div class="event-card" style=<%= collapse_today %> >
 
                 <%= link_to event_path(day_event.id), class: "event-card-link" do %>
 
