serving before merge, added invite accept decline section on show and styled edit event

--- a/app/assets/stylesheets/events/_edit.scss
+++ b/app/assets/stylesheets/events/_edit.scss
@@ -50,6 +50,12 @@
       margin-bottom: 32px;
     }
 
+    .event_spotify_playlist {
+      margin-bottom: 42px;
+      align-self: flex-start;
+      width: 100%;
+    }
+
     .button-create {
       display: inline-block;
     }
