--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -55,11 +55,24 @@
         justify-content: center;
         align-items: center;
         font-size: 8rem;
+        margin: 0px auto;
+      }
+
+      .host-info {
+        width: -webkit-fill-available;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .list-button {
+          width: fit-content;
+        }
       }
 
       .host-name {
         font-size: 1.5rem;
         width: fit-content;
+        margin: 16px 0 24px;
         a {
           color: $black;
           &:hover {
@@ -82,6 +95,64 @@
           color: $magenta;
         }
       }
+    }
+  }
+
+  .invite-options {
+    background-color: $beige;
+    padding: 48px;
+    width: 40%;
+    display: flex;
+    border-radius: 2px;
+    margin-bottom: 80px;
+    position: relative;
+    justify-content: center;
+
+    .accept-invitation, .decline-invitation {
+      width: 200px;
+      height: 200px;
+      background-size: cover;
+      border: 1.5px black solid;
+      border-radius: 2px;
+
+      .accepting, .declining {
+        display: none;
+        width: 100%;
+        height: 100%;
+        color: $white;
+        font-size: 1.5rem;
+        margin-bottom: 8px;
+        justify-content: center;
+        align-items: center;
+      }
+
+      &:hover {
+        background: none;
+        border: none;
+        .accepting, .declining {
+          border: 1.5px solid black;
+          border-radius: 2px;
+          display: flex;
+          text-decoration: none;
+        }
+
+        .accepting {
+          background-color: #57886c;
+        }
+
+        .declining {
+          background-color: #dd1155;
+        }
+      }
+    }
+
+    .accept-invitation {
+      background-image: image-url("accept.png");
+      margin-right: 48px;
+    }
+
+    .decline-invitation {
+      background-image: image-url("decline.png");
     }
   }
 
