--- a/app/views/events/_details.html.erb
+++ b/app/views/events/_details.html.erb
@@ -20,6 +20,9 @@
       <div class="host-avatar tilt" style="background-image: url('<%= @event.user.avatar.attached? ? cl_image_path(@event.user.avatar.key) : image_path("placeholder-avatar.png") %>')"></div>
     <div class="host-info">
       <div class="host-name"><%= link_to @event.user.full_name, user_path(@event.user) %></div>
+      <% if current_user == @event.user %>
+        <a href="" class="list-button button-invite">Invite friends</a>
+      <% end %>
     </div> 
   </div>
 </div>
