made the footer stay at the bottom of the page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,8 +16,10 @@
 @import "events/index";
 @import "dashboard/dashboard";
 
+
 .main-wraper {
   padding-top: 130px;
+  padding-bottom: 160px;
 }
 
 body {
