--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,16 +13,19 @@
     <% if @event.is_invited?(current_user) && @event.invitations.where(receiver: current_user).first.status == "pending" %>
       <div class="invite-options">
         <div class="section-header">The Invitation</div>
-        <div class="accept-invitation">
-          <%= link_to invitation_path(@event.invitations.where(receiver: current_user).first, status: "accepted") , class: "accepting", method: "patch", remote: true do %>
-            Accept
+        <div class="invitation-text">Hey <%= current_user.full_name.strip.empty? ? "Somebody" : curren_user.full_name %>! You are invited to the event. You wanna join?</div>
+        <div class="invite-choices">
+          <div class="accept-invitation">
+            <%= link_to invitation_path(@event.invitations.where(receiver: current_user).first, status: "accepted") , class: "accepting", method: "patch", remote: true do %>
+              Accept
+            <% end %>
+          </div>
+          <div class="decline-invitation">
+            <%= link_to invitation_path(@event.invitations.where(receiver: current_user).first, status: "declined") , class: "declining", method: "patch", remote: true do %>
+              Decline
           <% end %>
+          </div>
         </div>
-        <div class="decline-invitation">
-          <%= link_to invitation_path(@event.invitations.where(receiver: current_user).first, status: "declined") , class: "declining", method: "patch", remote: true do %>
-            Decline
-        <% end %>
-       </div>
       </div>
     <% end %>
 
