--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,7 +49,13 @@
           <% if @event.spotify_playlist %>
             <iframe src="https://open.spotify.com/embed/playlist/<%= @event.spotify_playlist %>" width="400" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           <% else %>
-            <div class="no-playlist">Add a Playlist</div>
+            <div class="no-playlist">
+              <% if current_user == @event.user %>
+                <%= link_to "Add a Playlist", edit_event_path(@event), title: "Update event", class: "list-button button-invite" %>
+              <% else %>
+                No playlist added yet
+              <% end %>
+            </div>
           <% end %>
         </div>
       </div>
