--- a/app/assets/stylesheets/pages/_bring_list.scss
+++ b/app/assets/stylesheets/pages/_bring_list.scss
@@ -1,20 +1,16 @@
 .items-playlist {
-  width: 75%;
+  width: 67.5vw;
   margin-bottom: 80px;
   background-color: $light-gray;
   display: flex;
   border-radius: 2px;
-  flex-direction: row;
-  justify-content: stretch;
 }
 .items-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   background-color: $beige;
   width: 100%;
   border-radius: 2px;
-  align-content: space-between;
   padding: 48px;
   position: relative;
 }
@@ -22,12 +18,10 @@
   background-color: $white;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
   min-height: 400px;
-  max-height: 420px;
   border: 1.5px solid black;
   border-radius: 2px;
+  
   .button-map {
     background-color: $magenta;
     color: $white;
@@ -95,7 +89,7 @@
 .items-list {
   background-color: $white;
   height: calc(100% - 120px);
-  max-height: 415px;
+  max-height: 390px;
   overflow: scroll;
   tr {
     font: 400 20px/1.5 Gilroy, sans-serif;
