centered googlemaps button

--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -17,5 +17,5 @@
       <% end %>
     <% end %>
   </div>
-  <a href="" class="list-button button-invite">See list</a>
+  <a href="" class="list-button button-invite">Open Guestlist</a>
 </div>
