--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -417,6 +417,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    align-items: center;
 
     #map {
       width: 100%;
