--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -86,16 +86,19 @@ i.fas.fa-filter {
 #filter-label-hosting {
   color: $violet;
   margin: 0px 15px 0px 5px;
+  font-weight: 700;
 }
 
 #filter-label-accepted {
   color: $green;
   margin: 0px 15px 0px 5px;
+  font-weight: 700;
 }
 
 #filter-label-pending {
   color: $blue;
   margin: 0px 20px 0px 5px;
+  font-weight: 700;
 }
 
 .button-filter {
@@ -149,83 +152,6 @@ i.fas.fa-filter {
   }
 }
 
-// .hosting-button {
-//   width: 100px;
-//   height: 30px;
-//   border-radius: 2px;
-//   background-color: $violet;
-//   border-color: black;
-//   border: solid;
-//   border-width: 2px;
-//   margin-right: 4px;
-//   display: table;
-//   margin-bottom: 4px;
-//   a {
-//     color: white;
-//     text-align: center;
-//     vertical-align: middle;
-//     display: table-cell;
-//   }
-// }
-
-// .accepted-button {
-//   width: 100px;
-//   height: 30px;
-//   border-radius: 2px;
-//   background-color: $green;
-//   border-color: black;
-//   border: solid;
-//   border-width: 2px;
-//   margin-right: 4px;
-//   display: table;
-//   margin-bottom: 4px;
-//   a {
-//     color: white;
-//     text-align: center;
-//     vertical-align: middle;
-//     display: table-cell;
-//   }
-// }
-
-// .pending-button {
-//   width: 100px;
-//   height: 30px;
-//   border-radius: 2px;
-//   background-color: $blue;
-//   border-color: black;
-//   border: solid;
-//   border-width: 2px;
-//   display: table;
-//   margin-bottom: 4px;
-//   a {
-//     color: white;
-//     text-align: center;
-//     vertical-align: middle;
-//     display: table-cell;
-//   }
-// }
-
-// .hosting-button:hover {
-//   font-weight: bold;
-//   font-size: 16px;
-//   background-color: black;
-//   text-decoration: none;
-// }
-
-// .accepted-button:hover {
-//   font-weight: bold;
-//   font-size: 16px;
-//   background-color: black;
-//   text-decoration: none;
-// }
-
-// .pending-button:hover {
-//   font-weight: bold;
-//   font-size: 16px;
-//   background-color: black;
-//   text-decoration: none;
-// }
-
 .event-card-section {
   display: flex;
   justify-content: left;
@@ -247,8 +173,6 @@ i.fas.fa-filter {
   border-radius: 2px;
   border: solid;
   background-color: white;
-  // margin-top: 20px;
-  // margin-bottom: 40px;
   margin: 30px 15px 25px 15px;
   width: 270px;
   color: black;
@@ -308,16 +232,18 @@ i.fas.fa-filter {
 }
 
 #popup {
-    height: 40px;
-    width: 200px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: rgba(255,255,255, 0.6);
-    color: black;
-    display: none;
-    padding-top: 10px;
-    position: absolute;
-    border-radius: 20px;
+  height: 40px;
+  width: 200px;
+  text-align: center;
+  vertical-align: middle;
+  color: rgba(0, 0, 0, 0.4);
+  padding-top: 10px;
+  padding-left: 2px;
+  padding-right: 2px;
+  position: absolute;
+  top: -30px;
+  left: -83px;
+  font-size: 12px;
 }
 
 .event-card-body {
