changedwording in footer, changed filter icon colour

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
     <p> Careers </p>
         </div>
         <div id = 'center-textbox'>
-            <ul> 
+            <ul>
             <li><i id ="socials-icon" class="fab fa-facebook"></i></li>
             <li><i id ="socials-icon" class="fab fa-instagram-square"></i></li>
             <li><i id ="socials-icon" class="fab fa-twitter-square"></i></li>
@@ -19,6 +19,6 @@
         </div>
     </div>
     <div id ='black-bar'>
-    <p> Coded with love by the Host.it team. </p>
+    <p> coded with love by the host.it team </p>
     </div>
 </div>
