--- a/app/views/shared/_items_form.html.erb
+++ b/app/views/shared/_items_form.html.erb
@@ -18,11 +18,13 @@
             <% end %>
             </table>
         </div>
-        <div class="items-form m-3">
+        <div class="items-form">
             <%= simple_form_for([@event, Item.new], remote: true) do |f| %>
             <div class="add-item">
-              <%= f.input :name, :placeholder => "Enter item", label: false %>
-              <%= f.submit "Add Item", class: "button-map" %>
+              <%= f.input :name, :placeholder => "What do we need?", label: false %>
+              <%= button_tag type: :submit, class: "add-button" do %>
+                <i class="fas fa-plus-square"></i>              
+              <% end %>
             </div>
             <% end %>
         </div>
