fixed width guest cards

--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -121,6 +121,7 @@ i.fas.fa-filter {
 
 #today-anchor {
   z-index: 1000;
+  outline: 0;
 }
 
 .no-events {
@@ -357,5 +358,4 @@ i.fas.fa-filter {
     transform: scale(1);
   }
 }
-
 
