--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -208,7 +208,7 @@
     padding: 48px;
     display: flex;
     margin-right: 48px;
-    width: 45%;
+    width: fit-content;
     position: relative;
 
     .guest-list-header {
