--- a/app/views/shared/_items_form.html.erb
+++ b/app/views/shared/_items_form.html.erb
@@ -1,30 +1,30 @@
-<div class="list-container" background-color: white >
-        <div class="items-list">
-            <table>
-            <% @event.items.each do |item| %>
-            <tr>
-              <td><%= link_to '✖️', item_path(item), method: :delete, remote: true %></td>
-              <td> <%= item.name %></td>
-              <% if item.user_id != nil %>
-                <% if item.user.first_name == nil %>
-                <td>Somebody</td>
-                <% else %>                    
-                <td><%= item.user.first_name %></td>
-                <% end %>
-              <% else %>
-               <td><%= button_to 'Bring it', item_path(item), class:"button-map", method: :patch, remote: true %></td>         
-              <% end %>
-              </tr>
-            <% end %>
-            </table>
-        </div>
-        <div class="items-form m-3">
-            <%= simple_form_for([@event, Item.new], remote: true) do |f| %>
-            <div class="add-item">
-              <%= f.input :name, :placeholder => "Enter item", label: false %>
-              <%= f.submit "Add Item", class: "button-map" %>
-            </div>
-            <% end %>
-        </div>
+<div class="list-container">
+  <div class="items-list">
+      <table>
+      <% @event.items.each do |item| %>
+      <tr>
+        <td><%= link_to '✖️', item_path(item), method: :delete, remote: true %></td>
+        <td> <%= item.name %></td>
+        <% if item.user_id != nil %>
+          <% if item.user.first_name == nil %>
+          <td>Somebody</td>
+          <% else %>                    
+          <td><%= item.user.first_name %></td>
+          <% end %>
+        <% else %>
+          <td><%= button_to 'Bring it', item_path(item), class:"button-map", method: :patch, remote: true %></td>         
+        <% end %>
+        </tr>
+      <% end %>
+      </table>
+  </div>
+  <div class="items-form m-3">
+      <%= simple_form_for([@event, Item.new], remote: true) do |f| %>
+      <div class="add-item">
+        <%= f.input :name, :placeholder => "Enter item", label: false %>
+        <%= f.submit "Add Item", class: "button-map" %>
+      </div>
+      <% end %>
+  </div>
 </div>
 
