--- a/app/assets/stylesheets/pages/_bring_list.scss
+++ b/app/assets/stylesheets/pages/_bring_list.scss
@@ -19,31 +19,124 @@
 }
 
 .list-container {
-  height:100%;
-  padding: 20px;
-  background-color: $white;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  border: 1.5px solid black;
-  border-radius: 2px;
-  
-  .button-map {
-    background-color: $magenta;
-    color: $white;
-    text-decoration: none;
-    padding: 5px 30px 5px 30px;
+  max-height: 500px;
+
+  .items-list {
+    overflow-y: scroll;
+    height: 100%;
     border: 1.5px solid black;
     border-radius: 2px;
-    // margin-top: auto;
-    height: 100%;
+    background-color: $white;
 
-    &:hover {
-      text-decoration: none;
-      background-color: black;
-      color: $white;
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: $white;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: $black;
+      border-radius: 2px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: $magenta;
+    }
+
+    .item-row {
+      display: flex;
+      font-size: 1.3rem;
+      padding: 16px;
+      border-bottom: solid 1.5px lightgray;
+
+      .list-item-name {
+        flex-grow: 1;
+        margin-left: 8px;
+      }
+
+      .item-bringer {
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      .item-delete-button {
+        &:hover {
+          text-decoration: none;
+        }
+      }
+
+      .bring-button {
+        background-color: $magenta;
+        color: $white;
+        border: 1.5px solid black;
+        border-radius: 2px;
+        font-size: 1rem;
+        padding: 0 8px;
+        height: 100%;
+
+        &:hover {
+          text-decoration: none;
+          background-color: black;
+          color: $white;
+        }
+      }
+    }
+  }
+
+  .items-form {
+    margin-top: 16px;
+    .add-item {
+      display: flex;
+      border: 1.5px solid black;
+      border-radius: 2px;
+      background-color: $white;
+      .item_name {
+        margin-bottom: 0;
+        width: 100%;
+        border-radius: 0;
+        font-size: 1.3rem;
+        #item_name {
+          border: none;
+          border-radius: 0;
+          font-size: 1.3rem;
+        }
+      }
+
+      .add-button {
+        background-color: $white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        width: fit-content;
+        padding: 0 12px;
+
+        &:focus {
+          outline: 0;
+        }
+
+        i {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          font-size: 1.8rem;
+          color: $black;
+          &:hover {
+            text-decoration: none;
+            color: $magenta;
+          }
+        }
+      }
     }
   }
 }
+
 .playlist-container {
   margin-left: 48px;
   background-color: #e8ddb5;
@@ -60,128 +153,14 @@
     width: fit-content;
 
     .no-playlist {
-    width: max-content;
-    font-size: 1.2rem;
-    padding: 8px;
-    a {
-      font-size: 1rem;
-      font-weight: normal;
-    }
-    }
-  }
-}
-
-.add-item {
-  display:flex;
-  border: 1.5px solid black;
-  border-radius: 2px;
-  justify-content: space-around;
-}
-
-.items-form {
-  display: flex;
-  justify-content: space-between;
-  background-color: #FFFDF7;
-  #item_name {
-    width: 100%;
-    border-radius: 2px;
-    justify-content: space-around;
-    display: flex;
-    background-color: #FFFDF7;
-    font-size: 1.3rem;
-    width: 95%;
-    border: none;
-    padding: 8px 16px;
-    form {
-      display: flex;
-      width: 100%;
-    }
-  }
-
-  .form-group {
-    margin-bottom: 0;
-  }
-
-  .add-button {
-    background-color: $white;
-    width: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-
-    &:focus {
-      outline: 0;
-    }
-
-    i {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      font-size: 1.7rem;
-      color: $black;
-      &:hover {
-        text-decoration: none;
-        color: $magenta;
+      width: max-content;
+      font-size: 1.2rem;
+      padding: 8px;
+      a {
+        font-size: 1rem;
+        font-weight: normal;
       }
     }
-  } 
-}
-
-
-.items-list {
-  background-color: $white;
-  height: calc(100% - 120px);
-  max-height: 390px;
-  overflow: scroll;
-  tr {
-    font: 400 20px/1.5 Gilroy, sans-serif;
-    border-bottom: 1px solid #ccc;
-    width: 100%;
   }
-  th {
-    padding: 12px 5px;
-    text-align: center;
-  }
-  td {
-    text-align: center;
-    padding: 12px 5px;
-  }
-}
-
-.items-form {
-  display: inline-block;
-}
-
-table {
-  // table-layout: auto;
-  width: 100%;
-}
-#bring-title {
-  font: 200 20px/1.5 Gilroy, sans-serif;
-  margin: 0;
-  padding-bottom: 5px;
-  color: white;
-}
-
-#bring-list {
-  text-decoration: none;
-  color: #000;
-  display: block;
-
-  -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -o-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
-  transition: font-size 0.3s ease, background-color 0.3s ease;
-}
-#bring-list td:hover {
-  font-size: 30px;
-  background: #f6f6f6;
-}
-#items-title {
-  padding-bottom: 10px;
-  color: black;
 }
 
