--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -13,5 +13,36 @@
   }
   form {
     width: 30vw;
+
+    .form-actions {
+      display: flex;
+      justify-content: center;
+      .login-button,
+      .register-button {
+        border: 1.5px solid black;
+        border-radius: 2px;
+        background-color: $magenta;
+        color: $white;
+        font-size: 1.3rem;
+        padding: 8px 16px;
+        margin: 8px 0 32px;
+        &:hover {
+          background-color: black;
+        }
+      }
+    }
+  }
+
+  .other-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    a {
+      color: black;
+      &:hover {
+        text-decoration: none;
+        color: $magenta;
+      }
+    }
   }
 }
