--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,10 +19,12 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+      <%= f.button :submit, "Sign up", class: "register-button"  %>
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="other-links">
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
 
