--- a/app/views/shared/_items_form_upgraded.html.erb
+++ b/app/views/shared/_items_form_upgraded.html.erb
@@ -1,26 +1,26 @@
 <div class="list-container"  >
-        <div class="items-list">
-            <% @event.items.each do |item| %>
-              <%= link_to '✖️', item_path(item), method: :delete, title: 'Delet item from list', class: "item-delete-button", remote: true %>
-              <div class="list-item-name"><%= item.name %></div>
-              <% if item.user_id != nil %>
-                <% if item.user.first_name == nil %>
-                  <div class="item-bringer">Somebody</div>
-                <% else %>      
-                  <div class="item-bringer"><%= item.user.first_name %></div>
-                <% end %>
-              <% else %>
-               <%= button_to 'Bring it', item_path(item), class:"bring-button", method: :patch, remote: true %>
-              <% end %>
-            <% end %>
-        </div>
-        <div class="items-form">
-            <%= simple_form_for [@event, Item.new], remote: true do |f| %>
-            <div class="add-item">
-              <%= f.input :name, :placeholder => "Enter item", label: false %>
-              <%= f.submit "Add Item", class: "button-map" %>
-            </div>
-            <% end %>
-        </div>
+  <div class="items-list">
+    <% @event.items.each do |item| %>
+      <div class="item-row">
+        <%= link_to '✖️', item_path(item), method: :delete, title: 'Delete item from list', class: "item-delete-button", remote: true %>
+      <div class="list-item-name"><%= item.name %></div>
+      <% if item.user %>
+          <div class="item-bringer"><%= item.user.first_name == nil ? "Somebody" : item.user.first_name %></div>
+      <% else %>
+        <%= button_to 'Bring it', item_path(item), class:"bring-button", method: :patch, remote: true %>
+      <% end %>
+      </div>
+    <% end %>
+  </div>
+  <div class="items-form">
+    <%= simple_form_for [@event, Item.new], remote: true do |f| %>
+    <div class="add-item">
+      <%= f.input :name, :placeholder => "What do we need?", label: false %>
+      <%= button_tag type: :submit, class: "add-button" do %>
+        <i class="far fa-plus-square"></i>            
+      <% end %>
+    </div>
+    <% end %>
+  </div>
 </div>
 
