--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -41,7 +41,7 @@
     <div class="items-playlist" id='items-anchor' >
       <div class ='items-container'>
       <div class="section-header">The Bringlist</div>
-        <div id='test'><%= render "shared/items_form_upgraded" %></div>
+        <div id='test'><%= render "shared/items_form" %></div>
       </div>
       <div class ='playlist-container'>
         <div class="section-header">The Playlist</div>
