--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -40,10 +40,10 @@
                     </div>
 
                     <div class="event-card-footer-symbols">
-                      <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), title: "Edit event",method: :patch) do %>
+                      <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), class: "dashboard-accept", title: "Edit event",method: :patch) do %>
                         <i class="fas fa-check-circle"></i>
                       <% end %>
-                      <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), method: :patch) do  %>
+                      <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), class: "dashboard-decline", method: :patch) do  %>
                         <i class="fas fa-times-circle"></i>
                       <% end %>
                     </div>
