added pointer to slideshow images

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -221,6 +221,7 @@
         height: 400px;
         width: 300px;
         // temporary
+        cursor: pointer;
         color: $black;
         display: flex;
         justify-content: center;
