--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -7,7 +7,7 @@
     <div class="message-username-time">
         <div class="message-username">
           <%= link_to user_path(current_user) do %>
-            <%= message.user.full_name.strip.empty? ? "Nemo" : message.user.full_name %>
+            <%= message.user.full_name.strip.empty? ? "Somebody" : message.user.full_name %>
           <% end %>
         </div>
       <div class="message-time"><%= message.created_at.strftime("on %a %b %e at %l:%M %p") %>
