--- a/app/assets/stylesheets/pages/_bring_list.scss
+++ b/app/assets/stylesheets/pages/_bring_list.scss
@@ -153,6 +153,21 @@
   .playlist {
     width: fit-content;
 
+    .spotify-button {
+      background-color: $magenta;
+      padding: 16px;
+      border: 1.5px solid black;
+      border-radius: 2px;
+      color: $white;
+
+        &:hover {
+          text-decoration: none;
+          background-color: black;
+        }
+      
+
+    }
+
     .no-playlist {
       width: max-content;
       font-size: 1.2rem;
