--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -6,9 +6,10 @@
           </div>
           <div class="guest-name">
             <% if !@event.user.full_name.strip.empty? %>
-              <%= link_to @event.user.full_name, user_path(@event.user)%>
+              <%= link_to @event.user.full_name, user_path(@event.user) %>
+              <div class="host-logo"><%= image_tag "host-logo.svg" %></div>
             <% else %>
-              <%= link_to "Someone", user_path(@event.user) %>
+              <%= link_to "Somebody", user_path(@event.user) %>
             <% end %>
           </div>
     </div>
@@ -22,7 +23,7 @@
             <% if invitation.receiver && !invitation.receiver.full_name.strip.empty? %>
               <%= link_to invitation.receiver.full_name, user_path(invitation.receiver)%>
             <% else %>
-              <%= link_to "Someone", user_path(invitation.receiver) %>
+              <%= link_to "Somebody", user_path(invitation.receiver) %>
             <% end %>
           </div>
         </div>
